buildpacks/nodejs/tests/snapshots/test_pnpm_prune_dev_dependencies_config.snap
---
source: crates/test_support/src/lib.rs
---
Warning: No schema version declared in project.toml, defaulting to schema version 0.1
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Node.js version not specified, using `22.x`
  - Resolved Node.js version: `22.18.0`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.18.0/node-v22.18.0-<arch>.tar.gz ... (OK)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.18.0 (<arch>)`
  - Installing Node.js `22.18.0 (<arch>)` ... (<time_elapsed>)
- Using Corepack version `0.33.0`
- Found `packageManager` set to `pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b` in `package.json`
- Enabling Corepack
  - Creating Corepack shims
  - Executing `corepack enable --install-directory /layers/heroku_nodejs/shim/bin pnpm`
- Installing `pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b`
  - Creating Corepack package manager
  - Running `corepack prepare`

      Preparing pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b...

  - Done (<time_elapsed>)
- Setting up pnpm dependency store
  - Creating new pnpm content-addressable store
  - Creating pnpm virtual store
- Installing dependencies
  - Running `pnpm install --frozen-lockfile`

      Lockfile is up to date, resolution step is skipped
      Packages: +2
      ++

      dependencies:
      + dotenv 16.4.5

      devDependencies:
      + environment 1.1.0

      Done in <time_elapsed>

  - Done (<time_elapsed>)
- Pruning unused dependencies from pnpm content-addressable store
  - Running `pnpm store prune`

      Removed all cached metadata files
      Removed 0 files
      Removed 0 packages

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Skipping as pruning was disabled in project.toml

! Warning: Experimental configuration `com.heroku.buildpacks.nodejs.actions.prune_dev_dependencies` found in `project.toml`. This feature may change unexpectedly in the future.

- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:mgr'
Adding layer 'heroku/nodejs:shim'
Adding layer 'heroku/nodejs:virtual'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:addressable'
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:mgr'
Adding cache layer 'heroku/nodejs:shim'
Successfully built image '<image-name>'
