buildpacks/nodejs/tests/snapshots/yarn_4_modules_zero.snap
---
source: crates/test_support/src/lib.rs
---
## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `>=18.0.0 <19.0.0-0`
  - Resolved Node.js version: `18.20.8`
- Installing Node.js distribution
  - Downloading Node.js `18.20.8 (<arch>)` from https://nodejs.org/download/release/v18.20.8/node-v18.20.8-<arch>.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `18.20.8 (<arch>)`
  - Installing Node.js `18.20.8 (<arch>)` ... (<time_elapsed>)
- Using Corepack version `0.32.0`
- Found `packageManager` set to `yarn@4.0.0` in `package.json`
- Enabling Corepack
  - Creating Corepack shims
  - Executing `corepack enable --install-directory /layers/heroku_nodejs/shim/bin yarn`
- Installing `yarn@4.0.0`
  - Creating Corepack package manager
  - Running `corepack prepare`

      Preparing yarn@4.0.0...

  - Done (<time_elapsed>)
- Yarn CLI operating in yarn 4.0.0 mode.
- Setting up yarn dependency cache
  - Running `yarn config set enableGlobalCache false`

      ➤ YN0000: Successfully set enableGlobalCache to false

  - Done (<time_elapsed>)
  - Yarn zero-install detected. Skipping dependency cache.
- Installing dependencies
  - Running `yarn install --immutable --inline-builds --immutable-cache`

      ➤ YN0000: · Yarn 4.0.0
      ➤ YN0000: ┌ Resolution step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Fetch step
      ➤ YN0000: └ Completed
      ➤ YN0000: ┌ Link step
      ➤ YN0000: └ Completed
      ➤ YN0000: · Done in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Done (finished in <time_elapsed>)
